DHFPROD-5312: Make a (tile height + footer) fit into 100% of the page to avoid activating page scrollbar

--- a/marklogic-data-hub-central/ui/src/pages/Overview.module.scss
+++ b/marklogic-data-hub-central/ui/src/pages/Overview.module.scss
@@ -6,7 +6,7 @@
 }
 
 .overviewContainer {
-    line-height: 1.7;
+    line-height: 1.4;
     color: #333;
     background: #fff;
     margin: 20px 70px 20px 40px;
